--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,16 @@ nav ul li:hover {
 }
 
 main {
+    
+    flex: 1;
+    background-color: #fff;
+    margin-top: 10px;
+    padding: 20px;
+    border-left: 2px solid #ccc;
+    border-top: 2px solid #ccc;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+}
+/* main {
     flex: 1;
     display: flex;
     justify-content: space-between;
@@ -181,6 +191,12 @@ main {
     margin-top: 10px;
     border-left: 2px solid #ccc;
     border-top: 2px solid #ccc;
+} */
+
+h1 {
+    font-size: 1em;
+    text-align: center;
+    color: #333;
 }
 
 .breadcrumb {
@@ -189,12 +205,14 @@ main {
     margin-bottom: 10px;
 }
 
-.sp {
+/* .sp {
     font-weight: 900;
-}
+} */
 
 .content {
-    font-size: 0.7em;
+    /* font-size: 0.7em; */
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -290,4 +308,174 @@ footer a {
         margin-top: 5px;
         font-size: 12px;
     }
+}
+
+
+
+/* main {
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #fff;
+    margin-top: 10px;
+    border-left: 2px solid #ccc;
+    border-top: 2px solid #ccc;
+} */
+/* main {
+    
+    flex: 1;
+    background-color: #fff;
+    margin-top: 10px;
+    padding: 20px;
+    border-left: 2px solid #ccc;
+    border-top: 2px solid #ccc;
+    
+}
+
+h1 {
+    font-size: 1em;
+    text-align: center;
+    color: #333;
+} */
+
+/* .breadcrumb {
+    margin-bottom: 20px;
+    color: #666;
+} */
+
+table {
+    width: 98%;
+    border-collapse: collapse;
+    margin-bottom: 80px;
+    /* box-shadow: 0 4px 6px rgba(6, 182, 212, 0.5); */
+    /* box-shadow: 0px 0px 36px 0px #00000040; */
+
+}
+
+tbody {
+    box-shadow: 0px 0px 36px 0px #00000040;
+}
+
+th, td {
+    border: 3px solid #F3F2F2;
+    padding: 10px;
+    text-align: left;
+    
+}
+
+td {
+    font-size: 0.8em;
+    font-weight: 700;
+    padding: 15px;
+    
+}
+
+th {
+    background-color: #F3F2F2;
+    font-weight: 750;
+    font-size: 0.9em;
+}
+
+td div{
+    background-color: #f4f4f4;
+    padding: 2px;
+    width: 79px;
+    border-radius: 8px;
+    margin-top: 4px;
+}
+
+.remove-btn {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 0.8em;
+}
+
+/* .prescription-table {
+    margin-bottom: 20px;
+} */
+
+.add-prescription-form {
+    /* background-color: #f9f9f9; */
+    /* padding: 20px; */
+    /* border: 1px solid #ddd; */
+    /* margin-top: 80px; */
+}
+
+.add-prescription-form h3 {
+    margin-bottom: 10px;
+}
+
+form {
+    display: flex;
+}
+
+.holding {
+    display: flex;
+}
+
+
+
+.input-field-1 {
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 22em;
+    border: 3px solid #F3F2F2;
+    border-radius: 8px;
+    /* width: calc(25% - 22px); */
+}
+
+.input-field-2 {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 3px solid #F3F2F2;
+    width: 19em;
+    border-radius: 8px;  
+    /* width: calc(25% - 22px); */
+}
+
+.input-field-3 {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 3px solid #F3F2F2;
+    width: 22em; 
+    border-radius: 8px; 
+    /* width: calc(25% - 22px); */
+}
+
+.input-field-4 {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 3px solid #F3F2F2;
+    width: 10em;
+    margin-right: 5px;
+    border-radius: 8px;  
+    /* width: calc(25% - 22px); */
+}
+
+.add-btn {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.nav-buttons {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.nav-btn {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
 }
