--- a/styles.css
+++ b/styles.css
@@ -174,12 +174,19 @@ nav ul li:hover {
 
 main {
     
-    flex: 1;
+    /* flex: 1; */
     background-color: #fff;
-    margin-top: 10px;
+    margin-top: 15px;
     padding: 20px;
-    border-left: 2px solid #ccc;
-    border-top: 2px solid #ccc;
+    box-shadow: -7px -3px 10px -2px rgba(0, 0, 0, 0.2);
+    /* border-left: 2px solid #ccc;
+    border-top: 2px solid #ccc; */
+    height: 620px;
+    width: 1028px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-start; */
+    
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 /* main {
@@ -213,6 +220,7 @@ h1 {
     /* font-size: 0.7em; */
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
 
 
@@ -344,12 +352,13 @@ h1 {
     color: #666;
 } */
 
-table {
+
+
+
+/* table {
     width: 98%;
     border-collapse: collapse;
     margin-bottom: 80px;
-    /* box-shadow: 0 4px 6px rgba(6, 182, 212, 0.5); */
-    /* box-shadow: 0px 0px 36px 0px #00000040; */
 
 }
 
@@ -393,89 +402,340 @@ td div{
     padding: 5px 10px;
     cursor: pointer;
     font-size: 0.8em;
-}
+} */
+
+
+
+
 
 /* .prescription-table {
     margin-bottom: 20px;
 } */
 
-.add-prescription-form {
-    /* background-color: #f9f9f9; */
-    /* padding: 20px; */
-    /* border: 1px solid #ddd; */
-    /* margin-top: 80px; */
+
+
+.select-options{
+    display: flex ;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 3px;
+    flex-wrap: wrap;
+    margin-bottom: 37px;
 }
 
-.add-prescription-form h3 {
-    margin-bottom: 10px;
-}
-
-form {
-    display: flex;
-}
-
-.holding {
-    display: flex;
-}
-
-
-
-.input-field-1 {
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 22em;
-    border: 3px solid #F3F2F2;
-    border-radius: 8px;
-    /* width: calc(25% - 22px); */
-}
-
-.input-field-2 {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 3px solid #F3F2F2;
-    width: 19em;
-    border-radius: 8px;  
-    /* width: calc(25% - 22px); */
-}
-
-.input-field-3 {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 3px solid #F3F2F2;
-    width: 22em; 
-    border-radius: 8px; 
-    /* width: calc(25% - 22px); */
-}
-
-.input-field-4 {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 3px solid #F3F2F2;
-    width: 10em;
-    margin-right: 5px;
-    border-radius: 8px;  
-    /* width: calc(25% - 22px); */
-}
-
-.add-btn {
-    background-color: red;
-    color: white;
+.select-options > button{
+    background-color: #e74c3c;
+    color: #fff;
+    padding: 3px 8px;
     border: none;
-    border-radius: 8px;
-    padding: 8px;
+    font: 700 13px "Roboto", sans-serif;
     cursor: pointer;
+    border: 1px solid #e74c3c;
+    text-overflow: ellipsis;
 }
 
-.nav-buttons {
+.select-options >button:nth-child(1){
+    background-color: #fff;
+    color: #e74c3c;
+    border: 1px solid #e74c3c;
+    padding: 2px;
+}
+
+
+/*table*/
+
+.drug-table {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 5px;
+    margin-bottom: 95px;
+}
+
+.drug-table > h4{
+    font: 500 15px "Roboto", sans-serif;
+    
+}
+
+.drug-table > table{
+    width: 100%;
+    border: 0;
+    border-collapse: collapse;
+    color: var(--main_color);
+    /* box-shadow: 0px 0px 36px 0px #00000040; */
+    box-shadow: 0px 8px 16px 4px rgba(117, 116, 116, 0.25);
+    overflow-x: auto;
+}
+
+tr, th, td{
+    border: 2px solid #E5E5E5;
+    border-top: none;
+    border-left: none;
+}
+
+th:nth-last-child(1), td:nth-last-child(1){
+    border-right: 1px solid transparent;
+}
+
+th {
+    background-color: #F3F2F2;
+    padding: 7px;
+    text-align: left;
+    font: 900 14px "Roboto", sans-serif;
+}
+
+th:nth-child(1) {
     text-align: center;
-    margin-top: 20px;
 }
 
-.nav-btn {
-    background-color: #3498db;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
+td {
+    padding: 8px 20px;
+    font: 500 12px "Roboto", sans-serif;
+}
+
+.medicine-name > p {
+    margin-bottom: 3px;
+}
+
+.medicine-name > button, .action > button {
+    color: #fff;
+    background-color: #8F8989;
+    font: 500 10px "Roboto", sans-serif;
+    border: 0;
+    outline: none;
+    padding: 2px 6px;
+    border-radius: 6px;
+}
+
+.action > button {
+    background-color: #e74c3c;
     cursor: pointer;
+}
+
+td:nth-child(1) {
+    color: #505050;
+    font: 500 15px "Roboto", sans-serif;
+    text-align: center;
+}
+
+
+
+  /* .blank-container{
+    width: 1028px;
+    height: 620px;
+    padding: 21px;
+    box-shadow: -7px -3px 10px -2px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+} */
+/* blank page heading */
+/* .blank-container > .blank-heading {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 37px;
+}
+.blank-container > .blank-heading > svg {
+    display: none;
+}
+.blank-container > .blank-heading > p{
+    font: 900 24px "Roboto", sans-serif;
+    color: var(--main_color);
+    text-transform: capitalize;
+}
+.blank-container > .blank-heading > div{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+.blank-container > .blank-heading > div > p{
+    font: 900 18px "Roboto", sans-serif;
+    color: var(--secondary_color);
+    text-transform: capitalize;
+}
+.blank-container > .blank-heading > div > p:last-child{
+    color: var(--main_color);
+}
+.blank-container > .blank-heading > div > svg{
+    width: 15px;
+    height: 15px;
+    fill: var(--secondary_color);
+} */
+/* select buttons */
+/* .blank-container > .select-options{
+    display: flex ;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 3px;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+}
+.blank-container > .select-options > button{
+    padding: 3px 8px;
+    background-color: var(--tertiary_color);
+    color: #fff;
+    border: 1px solid var(--tertiary_color);
+    font: 700 13px "Roboto", sans-serif;
+    cursor: pointer;
+    outline: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.blank-container > .select-options >button:nth-child(1){
+    background-color: #fff;
+    color: var(--tertiary_color);
+} */
+/* table */
+/* .blank-container > .drug-table{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 5px;
+    margin-bottom: 95px;
+}
+.blank-container > .drug-table > h4{
+    font: 500 15px "Roboto", sans-serif;
+    color: var(--main_color);
+}
+.blank-container > .drug-table > table{
+    width: 100%;
+    border: 0;
+    border-collapse: collapse;
+    color: var(--main_color);
+    box-shadow: 0px 8px 16px 4px rgba(117, 116, 116, 0.25);
+    overflow-x: auto;
+}
+tr, th, td{
+    border: 2px solid #E5E5E5;
+    border-top: none;
+    border-left: none;
+}
+th:nth-last-child(1), td:nth-last-child(1){
+    border-right: 1px solid transparent;
+}
+th {
+    background-color: #F3F2F2;
+    padding: 7px;
+    text-align: left;
+    font: 900 14px "Roboto", sans-serif;
+}
+th:nth-child(1){
+    text-align: center;
+}
+td{
+    padding: 8px 20px;
+    font: 500 12px "Roboto", sans-serif;
+}
+.medicine-name > p{
+    margin-bottom: 3px;
+}
+.medicine-name > button, .action > button{
+    color: #fff;
+    background-color: #8F8989;
+    font: 500 10px "Roboto", sans-serif;
+    border: 0;
+    outline: none;
+    padding: 2px 6px;
+    border-radius: 6px;
+}
+.action > button {
+    background-color: var(--tertiary_color);
+    cursor: pointer;
+}
+td:nth-child(1){
+    color: #505050;
+    font: 500 15px "Roboto", sans-serif;
+    text-align: center;
+} */
+
+/* Add drug section */
+.add-drug {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+.add-drug > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 4px;
+}
+
+.add-drug > div > p {
+    font: 900 13px "Roboto", sans-serif;
+}
+
+.add-drug > div:nth-child(1) {
+    width: 29.2%;
+}
+.add-drug > div:nth-child(2) {
+    width: 24.2%;
+}
+.add-drug > div:nth-child(3) {
+    width: 27.8%;
+}
+.add-drug > div:nth-child(4) {
+    width: 11.8%;
+}
+.add-drug > div > input{
+    width: 100%;
+    padding: 10px 10px 5px 23px;
+    border: 0;
+    outline: none;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.2);
+    font: 500 15px "Roboto", sans-serif;
+}
+.add-drug > div > input:nth-last-child(1){
+    padding: 7px;  
+}
+.add-drug > div > ::placeholder{
+    color: #C4C4C4;
+    font: 300 14px "Roboto", sans-serif;
+}
+.add-drug > button {
+    font: 900 14px "Roboto", sans-serif;
+    color: #fff;
+    background-color: #A12B2B;
+    padding: 6px 9px;
+    border: 1px solid var(--tertiary_color);
+    border-radius: 5px;
+    margin-left: 4px;
+    cursor: pointer;
+    margin-top: 22px;
+}
+.add-drug > div > section{
+    width: 100%;
+    height: 107px;
+    background-color: #fff;
+    padding: 20px 6px 5px;
+    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+.add-drug > div > section > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font: 400 12px "Roboto", sans-serif;
+    color: var(--main_color);
 }
