--- a/styles.css
+++ b/styles.css
@@ -735,11 +735,11 @@ footer > section > .items {
 }
 
 @media screen and (max-width: 1280px) {
-    footer{
+    footer {
         width: 100%;
         font: 900 15px "Roboto", sans-serif;
         position: absolute;
-        bottom: -50px;
+        /* bottom: -50px; */
         right: 0px;
         padding: 0;
         z-index: 20;
@@ -755,6 +755,46 @@ footer > section > .items {
         width: 100%;
     }
 }
+
+@media screen and (max-width: 1024px) {
+    footer > section { 
+        display: flex ;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+        padding: 33px 18px;
+    }
+}
+
+@media screen and (max-width: 766px) {
+    footer > div > button > p {
+        display: block;
+    }
+
+    .items > p {
+        display: block;
+        font: 900 15px "Roboto", sans-serif;
+    }
+
+    footer > section > p {
+        display: block;
+        font: 900 15px "Roboto", sans-serif;
+    }
+}
+
+@media screen and (max-width: 838px) {
+    footer > div {
+        width: 100%;
+        padding: 0 16px;
+    }
+    footer > div > button > img {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+
 /* .button-section {
     position: relative;
     display: flex;
